
Slick 7.x-2.0-dev, 2015-5-19
----------------------------
Issue #2490528 by fragtom: Variable with doesn't display right.
Notes:
- variableWidth is not compatible with slidesToShow > 1 if the container is
  smaller than the amount of visible slide widths.
  Best with uniform image heights to avoid jumpy empty space. Use scale height
  image effect, and keep width empty/dynamic.
  Useless with adaptiveHeight, and non-uniform image heights.
  Useless with slidesToShow > 1 if the container is smaller than the amount of
  visible slides.
  Troubled with lazyLoad ondemand. Use progressive or none instead.
- adaptiveHeight wants single visible slide (slidesToShow 1).
  Useless with variableWidth.


Slick 7.x-2.0-dev, 2015-5-13
----------------------------
Fixed for slick_remove_wasted_dependent_options() not removing dependents.

Slick 7.x-2.0-dev, 2015-5-2
---------------------------
Issue #2481577 by fragtom: Lazy load is not supported with Picture enabled
  images
Fixed skin fullwidth with .slide__constrained being overriden with relative
  position.

Slick 7.x-2.0-dev, 2015-4-29
----------------------------
Issue #2479117 by fragtom: Fade option is not compatible with slidesToShow > 1.
  Added meaningful info to the Fade option to avoid issue with multiple items.

Slick 7.x-2.0-dev, 2015-4-25
----------------------------
Issue #2477507 by sashken2: Original image for Colorbox display is ignored.

Slick 7.x-2.0-dev, 2015-4-24
----------------------------
Issue #2477065: jQuery.easing requirements
  Added more information at README.txt to rename jquery.easing.1.3.js to
  jquery.easing.min.js.
Fixed trivial spaces at slick.api.php.

Slick 7.x-2.0-dev, 2015-4-14
----------------------------
Fixed typo at slick.api.php.
Fixed edge cases Media Youtube, Vimeo, Soundcloud disabled while being used.
Fixed edge case Picture module disabled while being used by Slick.
Added a simple coded slick example to slick.api.php.