@@ -1,4 +1,8 @@
 
+Slick 7.x-2.0-dev, 2015-5-23
+----------------------------
+Issue #2479199 by gausarts: Drop wasted slick-wrapper when no asNavFor in use.
+
 Slick 7.x-2.0-dev, 2015-5-19
 ----------------------------
 Issue #2490528 by fragtom: Variable with doesn't display right.
